force-app/main/default/objects/Organization__c/fields/AbbrName__c.field-meta.xml
<CustomField>
    <fullName>AbbrName__c</fullName>
    <description>약어 이름</description>
    <label>Abbr. Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>