force-app/main/default/objects/Organization__c/fields/BranchManager__c.field-meta.xml
<CustomField>
    <fullName>BranchManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Organization</relationshipName>
    <type>Lookup</type>
</CustomField>