force-app/main/default/objects/Organization__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>거점 코드</description>
    <label>Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>