force-app/main/default/objects/Organization__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipName>Branch</relationshipName>
    <type>Lookup</type>
</CustomField>