force-app/main/default/objects/Organization__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>권역</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>PACIFIC</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>NORTH AMERICA</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>EUROPE</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>CHINA</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>LATIN AMERICA</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>MEIA</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>KOREA</label>
            </value>
            <value>
                <fullName>C60AI680</fullName>
                <label>Cello Square사업팀</label>
            </value>
            <value>
                <fullName>C60AI829</fullName>
                <label>전자물류사업팀</label>
            </value>
            <value>
                <fullName>C60AJ187</fullName>
                <label>글로벌사업팀</label>
            </value>
            <value>
                <fullName>C60AJ505</fullName>
                <label>스마트운영혁신팀</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>